--- a/2_EIP897_Delegate_Proxy/solidity/package.json
+++ b/2_EIP897_Delegate_Proxy/solidity/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eip",
+  "name": "eip897",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,5 +13,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.8.0",
+    "@truffle/hdwallet-provider": "^2.1.4",
+    "dotenv": "^16.0.3"
+  }
 }
